fix for minor overlapping bug
(needs merge or transfer to REL1_23)

(cherry picked from commit d6623ecb70e3a0a54f3f75c1e2ab14da62c0a74a)

--- a/resources/components/skin.menuTop.less
+++ b/resources/components/skin.menuTop.less
@@ -159,6 +159,8 @@ ul#bs-personal-info > li > a {
 }
 #bs-button-user #bs-personal-menu-container{
 	margin-top: 29px;
+	position: relative;
+	z-index: 19001;
 }
 #bs-button-user #bs-personal-menu-container, #bs-cactions-button > div.menu{
 	background-color: transparent;
